# operator-up

./: 404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
building/: index.html
contributing/: index.html
docs/: building.md  contributing.md  index.md  license.md
docs/scanning/: nmap.md
docs/soc/sysmon/: sysmon.md
docs/web_app/: sql_injections.md  sqlmap.md
docs/windows/: collection_operations.md  lat_movement.md  local_sa_cmds.md  network_sa_cmds.md  persistence.md  priv_esc.md  remote_alteration.md  remote_sa_cmds.md  sa_cmds.md
license/: index.html
osint/email/: index.html
scanning/nmap/: index.html
search/: search_index.json
soc/sysmon/sysmon/: index.html
stylesheets/: extra.css
web_app/sql_injections/: index.html
windows/collection_operations/: index.html
windows/lat_movement/: index.html
windows/local_sa_cmds/: index.html
windows/network_sa_cmds/: index.html
windows/persistence/: index.html
windows/priv_esc/: index.html
windows/remote_alteration/: index.html
windows/remote_sa_cmds/: index.html
